--- a/lib/pairing_project_web/controllers/user_html/index.html.heex
+++ b/lib/pairing_project_web/controllers/user_html/index.html.heex
@@ -4,6 +4,12 @@
     <.link href={~p"/users/new"}>
       <.button>New User</.button>
     </.link>
+    <.link href={~p"/projects"}>
+      <.button>Projects</.button>
+    </.link>
+    <.link href={~p"/"}>
+      <.button>Home</.button>
+    </.link>
   </:actions>
 </.header>
 
